name:                cryptopals
version:             0.1.0.0
synopsis:            A classy solution to https://cryptopals.com/ using cabal testing
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Ben Hamlin
maintainer:          protob3n@gmail.com
build-type:          Simple
extra-source-files:  ChangeLog.md
cabal-version:       >=1.10


library
    -- Modules exported by the library.
    exposed-modules:
        Cryptopals
    
    -- Modules included in this library but not exported.
    other-modules:       
        Cryptopals.Encoding
        Cryptopals.Statistics
        Cryptopals.Cipher
        Cryptopals.Cryptanalysis
        Cryptopals.Util

    -- LANGUAGE extensions used by some modules in this package.
    other-extensions:
        NoImplicitPrelude,
        OverloadedStrings,
        FlexibleInstances,
        FlexibleContexts,
        UndecidableInstances,
        MultiParamTypeClasses,
        StandaloneDeriving
    
    -- Other library packages from which modules are imported.
    build-depends:
        base >=4.9 && <4.10,
        protolude >=0.1 && <0.2,
        bytestring >=0.10 && <0.11,
        base64-bytestring >=1.0 && <1.1,
        base16-bytestring >=0.1 && <0.2,
        bits-bytestring >=0.1 && <0.2,
        words >=0.1 && <0.2,
        text >=1.2 && <1.3,
        containers >=0.5 && <0.6,
        async >=2.1 && <2.2,
        AES >=0.2 && < 0.3,
        curl >= 1.3 && < 1.4
    
    -- Directories containing source files.
    hs-source-dirs:      src
    
    -- Base language which the package is written in.
    default-language:    Haskell2010

test-suite challenges-set1
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    ghc-options:        -threaded
    hs-source-dirs:     tests/Challenges
    main-is:            Set1.hs
    build-depends:
        base >=4.9 && <4.10,
        protolude >=0.1 && <0.2,
        tasty >= 0.11,
        tasty-hunit >= 0.9,
        bytestring >=0.10 && <0.11,
        cryptopals

test-suite challenges-set2
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    ghc-options:        -threaded
    hs-source-dirs:     tests/Challenges
    main-is:            Set2.hs
    build-depends:
        base >=4.9 && <4.10,
        protolude >=0.1 && <0.2,
        tasty >= 0.11,
        tasty-hunit >= 0.9,
        bytestring >=0.10 && <0.11,
        cryptopals

test-suite challenges-set3
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    ghc-options:        -threaded
    hs-source-dirs:     tests/Challenges
    main-is:            Set3.hs
    build-depends:
        base >=4.9 && <4.10,
        protolude >=0.1 && <0.2,
        tasty >= 0.11,
        tasty-hunit >= 0.9,
        bytestring >=0.10 && <0.11,
        cryptopals

test-suite challenges-set4
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    ghc-options:        -threaded
    hs-source-dirs:     tests/Challenges
    main-is:            Set4.hs
    build-depends:
        base >=4.9 && <4.10,
        protolude >=0.1 && <0.2,
        tasty >= 0.11,
        tasty-hunit >= 0.9,
        bytestring >=0.10 && <0.11,
        cryptopals

test-suite challenges-set5
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    ghc-options:        -threaded
    hs-source-dirs:     tests/Challenges
    main-is:            Set5.hs
    build-depends:
        base >=4.9 && <4.10,
        protolude >=0.1 && <0.2,
        tasty >= 0.11,
        tasty-hunit >= 0.9,
        bytestring >=0.10 && <0.11,
        cryptopals

test-suite challenges-set6
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    ghc-options:        -threaded
    hs-source-dirs:     tests/Challenges
    main-is:            Set6.hs
    build-depends:
        base >=4.9 && <4.10,
        protolude >=0.1 && <0.2,
        tasty >= 0.11,
        tasty-hunit >= 0.9,
        bytestring >=0.10 && <0.11,
        cryptopals

test-suite challenges-set7
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    ghc-options:        -threaded
    hs-source-dirs:     tests/Challenges
    main-is:            Set7.hs
    build-depends:
        base >=4.9 && <4.10,
        protolude >=0.1 && <0.2,
        tasty >= 0.11,
        tasty-hunit >= 0.9,
        bytestring >=0.10 && <0.11,
        cryptopals

test-suite challenges-set8
    default-language:   Haskell2010
    type:               exitcode-stdio-1.0
    ghc-options:        -threaded
    hs-source-dirs:     tests/Challenges
    main-is:            Set8.hs
    build-depends:
        base >=4.9 && <4.10,
        protolude >=0.1 && <0.2,
        tasty >= 0.11,
        tasty-hunit >= 0.9,
        bytestring >=0.10 && <0.11,
        cryptopals

-- vim: set tabstop=4 shiftwidth=4 softtabstop=4:
